07.jan (ws)
      - implement dynamics for linked parts
      - new symbols for grace note palett
      - fix grace note entry
06.jan (ws)
      - add SlurSegment into "inspector"
      - more slur optimizations
       (la)
      - enable time signature deletion in timesig palette
05.jan (ws)
      - "reset to default" resets stem direction of chords to "auto"
      - tuning slur layout (test file slur1.mscx, slur2.mcx)
        (TODO: tuning of grace note slurs)
      - "reset to default" now also works in edit mode
04.jan (ws)
      - fix #8450: problem while playing imported guitar pro file
      - fixes for synthesizer parameter load/restore
02.jan (mi)
      - tablature duration symbols were incorrectly placed above topmost staff rather than
        above tablature staff: corrected
      - Note::_fretConflict was not properly initialized: corrected.
01.jan (2011!) (mi)
      - Measure::updateAccidentals for TAB staves uses whole chord context to avoid (or reduce)
        fretting conflicts (multiple notes of a chord on teh same string)
      - Added visible marks (red background) for notes with fretting conflicts
31.dec (ws)
      - better capella import: detect upbeat
      - save omr images along with score in mscz container
30.dec (lv)
      - add MusicXML regression testfile testVoiceMapper1.xml for #8385
29.dec (ws)
      - make default style configurable in preferences
25.dec (mi)
      - 2 tablature fonts updated
23.dec (ws)
      - fix #8365: Create tuplet crash
22.dec (la)
      - fix #8347: tie in note entry does not work for voice > 1 after a barline (patch by fnbecker)
      - fix #8308: Creating triplet in grace note leads to time corruption
       (ws)
      - fix #8358: new score: create one measure more when pickup measure selected
21.dec (mi)
      - in tablatures, changed Ctrl-Up/Dn to move same note on next string
20.dec (ws)
      - fix #8149: Note entry voice2 crash for 5/4 measure
       (la)